--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "firebase": "^7.14.1",
     "onsenui": "^2.10.10",
     "vue": "^2.6.11",
     "vue-onsenui": "^2.6.2",
