--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "fiery-vue": "^0.10.1",
     "firebase": "^7.14.1",
+    "grpc": "^1.24.2",
+    "node-pre-gyp": "0.12.0",
     "onsenui": "^2.10.10",
     "vue": "^2.6.11",
+    "vue-cli-plugin-pug": "^1.0.7",
     "vue-onsenui": "^2.6.2",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.11",
