--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "vue-cli-plugin-pug": "^1.0.7",
     "vue-onsenui": "^2.6.2",
     "vue-router": "^3.1.6",
+    "vue-star-rating": "^1.6.1",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
+    "@mdi/font": "^5.1.45",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-router": "~4.3.0",
     "@vue/cli-plugin-vuex": "~4.3.0",
