--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "cordova-serve-osx": "cross-env CORDOVA_PLATFORM=osx vue-cli-service cordova-serve-osx"
   },
   "dependencies": {
+    "@mdi/font": "^5.1.45",
     "core-js": "^3.6.4",
     "firebase": "^7.14.1",
     "onsenui": "^2.10.10",
+    "pug-plain-loader": "^1.0.0",
+    "stylus-loader": "^3.0.2",
     "vue": "^2.6.11",
     "vue-onsenui": "^2.6.2",
     "vue-router": "^3.1.6",
@@ -37,6 +40,8 @@
     "@vue/cli-plugin-router": "~4.3.0",
     "@vue/cli-plugin-vuex": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
+    "pug": "^2.0.4",
+    "pug-loader": "^2.4.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-cordova": "~2.4.1",
