--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   "dependencies": {
     "@mdi/font": "^5.1.45",
     "core-js": "^3.6.4",
-    "fiery-vue": "^0.10.1",
     "firebase": "^7.14.1",
     "grpc": "^1.24.2",
     "node-pre-gyp": "0.12.0",
@@ -38,7 +37,8 @@
     "vue-router": "^3.1.6",
     "vue-star-rating": "^1.6.1",
     "vuetify": "^2.2.11",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "fiery-vue": "^0.10.1"
   },
   "devDependencies": {
     "@mdi/font": "^5.1.45",
