--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -14,7 +14,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "cordova-android": "^8.1.0",
-    "cordova-ios": "~5.1.1"
+    "cordova-ios": "~5.1.1",
+    "vue-onsenui": "^2.6.2"
   },
   "devDependencies": {
     "cordova-plugin-whitelist": "^1.3.4"
