--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -27,8 +27,8 @@
       "cordova-universal-links-plugin": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
