--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "vue-star-rating": "^1.6.1",
     "vue-the-mask": "^0.11.1",
     "vuetify": "^2.2.11",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
     "@mdi/font": "^5.1.45",
